workout history fixes